added basic styling, continue to add

--- a/src/index.css
+++ b/src/index.css
@@ -5,3 +5,16 @@
   font-family: sans-serif;
 }
 
+a {
+  text-decoration: none;
+  color: #5a5a5a;
+}
+
+img {
+  cursor: pointer;
+}
+
+.flex-div {
+  display: flex;
+  align-items: center;
+}
