--- a/src/components/PlayVideo/PlayVideo.css
+++ b/src/components/PlayVideo/PlayVideo.css
@@ -44,6 +44,8 @@
   display: flex;
   align-items: center;
   margin-top: 20px;
+  margin-left: 12px;
+  margin-right: 12px;
 }
 
 .publisher div {
@@ -66,4 +68,36 @@
   width: 40px;
   border-radius: 50%;
   margin-right: 15px;
+}
+
+.publisher button {
+  background: red;
+  color: #fff;
+  padding: 8px 30px;
+  border: 0;
+  outline: 0;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.vid-description {
+  padding-left: 55px;
+  margin: 15px 0;
+}
+
+.vid-description p {
+  font-size: 14px;
+  margin-bottom: 5px;
+  color: #5a5a5a;
+}
+
+.vid-description h4 {
+  font-size: 14px;
+  color: #5a5a5a;
+  margin-top: 15px;
+}
+
+.vid-description img { /* Needs to be updated */
+  width: 12px;
+  border-radius: 50%;
 }
