Updated responsiveness for smaller screen, need to upload design document

--- a/src/Page/Video/Video.css
+++ b/src/Page/Video/Video.css
@@ -9,3 +9,9 @@
   background: #f9f9f9;
 }
 
+@media (max-width: 900px) {
+  .play-container {
+    padding-left: 5%;
+    padding-right: 5%;
+  }
+}
